dynamix/force-app/main/default/objects/Channel_Partner_Project__c/Channel_Partner_Project__c.object-meta.xml
<CustomObject>
    <label>Channel Partner Project</label>
    <nameField>
        <displayFormat>CPP-{0000}</displayFormat>
        <label>Channel Partner Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>