dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Additional_Services_Availed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services_Availed__c</fullName>
    <label>Additional Services Availed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>