dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Booking_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Booking_Conversion__c</fullName>
    <formula>(Bookings__c  /  Walk_IN_s__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>