dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Bookings__c.field-meta.xml
<CustomField>
    <fullName>Bookings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>