dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Categorgy__c.field-meta.xml
<CustomField>
    <fullName>Categorgy__c</fullName>
    <label>Category (SM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>