dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel Partner Projects</relationshipLabel>
    <relationshipName>Channel_Partner_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>