dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Collaterals__c.field-meta.xml
<CustomField>
    <fullName>Collaterals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collaterals</label>
    <type>Checkbox</type>
</CustomField>