dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Digital_Ads__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Ads</label>
    <type>Checkbox</type>
</CustomField>