dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Channel Partner Projects</relationshipLabel>
    <relationshipName>Channel_Partner_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>