dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( NOT( ISNULL( Last_Active_Date__c ) ) ,  if(TODAY() - Last_Active_Date__c &gt;=30, &apos;Inactive&apos;, &apos;Active&apos;) , &apos;Inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>