dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Tele_Calling__c.field-meta.xml
<CustomField>
    <fullName>Tele_Calling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tele-Calling</label>
    <type>Checkbox</type>
</CustomField>