dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Total_Walk_In__c.field-meta.xml
<CustomField>
    <fullName>Total_Walk_In__c</fullName>
    <label>Total Walk In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>