dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Unique_Outbound_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Unique_Outbound_Meeting_Date__c</fullName>
    <label>Unique Outbound Meeting Date</label>
    <type>Date</type>
</CustomField>