dynamix/force-app/main/default/objects/Channel_Partner_Project__c/fields/Walk_IN_s__c.field-meta.xml
<CustomField>
    <fullName>Walk_IN_s__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Walk-IN&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>