dynamix/force-app/main/default/objects/Channel_Partner_Project__c/listViews/S_M_Head_Channel_Partner_Project.listView-meta.xml
<ListView>
    <fullName>S_M_Head_Channel_Partner_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>S&amp;M Head</label>
    <queue>S_M_Head</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>